tests/invalid/exported_object_non_abi_field.wio
@Export
object BadProfile {
    public name: string;
}
